[package]
name = "pallet-beefy-test"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }


frame-support = { git = "https://github.com/selendra/substrate", default-features = false, branch = "0.1.0-tn3" }frame-system = { git = "https://github.com/selendra/substrate", default-features = false, branch = "0.1.0-tn3" }

sp-runtime = { git = "https://github.com/selendra/substrate", default-features = false, branch = "0.1.0-tn3" }
sp-std = { git = "https://github.com/selendra/substrate", default-features = false, branch = "0.1.0-tn3" }

pallet-session = { git = "https://github.com/selendra/substrate", default-features = false, branch = "0.1.0-tn3" }

beefy-primitives = { path = "../beefy-primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "0.1.0-tn3" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "0.1.0-tn3" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "0.1.0-tn3" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"beefy-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-session/std",
]
