[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
frame-benchmarking-cli = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
pallet-transaction-payment-rpc = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }

sc-basic-authorship = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-cli = { git = "https://github.com/selendra/substrate", features = ["wasmtime"], branch = "0.1.0-tn4" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-consensus = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-consensus-aura = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-executor = { git = "https://github.com/selendra/substrate", features = ["wasmtime"], branch = "0.1.0-tn4" }
sc-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-rpc = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-rpc-api = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-service = { git = "https://github.com/selendra/substrate", features = ["wasmtime"], branch = "0.1.0-tn4" }
sc-telemetry = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sc-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }

sp-api = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-consensus-aura = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-timestamp = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }
sp-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }

substrate-frame-rpc-system = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn4" }

[features]
default = []
runtime-benchmarks = []
